--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,7 +1,9 @@
 @import 'tailwindcss';
+@plugin "daisyui";
 
 @source '../views';
 @source '../../vendor/laravel/framework/src/Illuminate/Pagination/resources/views/*.blade.php';
+@source '../../vendor/robsontenorio/mary/src/View/Components/**/*.php';
 
 @custom-variant dark (&:where(.dark, .dark *));
 
